--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -15,6 +15,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: freitaspedro
+          gif_out_path: dist/github-contribution-grid-snake.gif 
           svg_out_path: dist/github-contribution-grid-snake.svg
           
       - name: Publish Snake Animation SVG
